--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  json_serializable: ^4.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    build_runner: ^1.12.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
