--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: coins_notif
-description: A new Flutter project.
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,15 +27,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  dio: ^4.0.0
-  json_serializable: ^4.1.0
+  cupertino_icons: ^1.0.0
+  dio: ^3.0.10
+  json_serializable: ^3.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    build_runner: ^1.12.2
-
+  build_runner: ^1.11.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
