--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   dio: ^3.0.10
   json_serializable: ^3.5.1
+  firebase_messaging: ^9.1.1
 
 dev_dependencies:
   flutter_test:
