--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   firebase_core: ^1.0.3
   firebase_messaging: ^9.1.1
   flutter_local_notifications: ^5.0.0+1
+  money_formatter: ^0.0.3
+  pattern_formatter: ^2.0.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
